исправил naidised в appshell

--- a/MauiApp1/AppShell.xaml
+++ b/MauiApp1/AppShell.xaml
@@ -13,7 +13,8 @@
             FontSize="Title"
             TextColor="DarkBlue"
             VerticalTextAlignment="Center"
-            Padding="25, 25,0,0"
+            HorizontalOptions="Center"
+            Padding="25, 25,25,0"
             HeightRequest="50"/>
     </Shell.TitleView>
     <ShellContent
