--- a/MauiApp1/AppShell.xaml
+++ b/MauiApp1/AppShell.xaml
@@ -8,7 +8,7 @@
 
     <Shell.TitleView>
         <Label 
-            Text="Naidised"
+            Text=""
             FontFamily="verdana"
             FontSize="Title"
             TextColor="DarkBlue"
